# moj-prvi-llm-projekt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
api/: README.md  index.py
